# marmot

./: .gitignore  Cargo.toml  rustfmt.toml  style.md
data/: AGENTS.md  audit  build  common.py  computing.py  computingfaculty.py  courses.py  fall2026_actual_schedule.sql  generate_mathfaculty.py  math-fall-2026.csv  mathematics.py  mathfaculty.py  queries.py  schema.sql  scrape
doc/: scheduling.md
fall2025/data/: computing.py  (+2 more)
kissat/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  build.rs
kissat/src/: lib.rs
sat/: conflicts.py  core.py  data.py  encoder_registry.py  encoder_types.py  encoding.py  faculty_utils.py  input.py  main.py  print.py  registry.py  save.py  search.py  solver.py  totalizer.py
spring2024-cset-data/: cset.py  schema.sql
spring2025/: build.sh  computing.sh  convert-placement-to-old-format.py  convert-placement-to-static.py  courses.sh  draft.js  edit  format-schedule  grid.js  highlight-macro  math.sh  previous.csv  schedule.json  schema.sql  static.js
src/: .gitignore  AGENTS.md  bits.rs  build.py  build.sh  cnf.rs  computing.py  computing.sh  courses.py  courses.sh  cset.py  data.rs  defs.rs  edit  error.rs  faculty_preferences.rs  input.rs  main.rs  print.rs  queries.py  rustsat-guide.md  sat.rs  sat_criteria.rs  sat_encoders.rs  sat_encoding.rs  sat_solver.rs  schema.sql  score.rs  scrape  setup.rhai  solver.rs  static_placement.rs  style-guide.md
ucur2024/: actual-placement.js  actual-score-report.txt  solver-score-report.txt  static_placement.rs
ui/: index.html  make_placement.py  placement.js
(+80 files in other folders)
