[package]
name = "kissat"
version = "0.2.0"
edition = "2018"
build = "build.rs"
description = "A simple wrapper for the Kissat SAT solver"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jleahy/kissat-rs"
keywords = ["sat"]
exclude = [
    "kissat/",
    "!kissat/LICENSE",
    "!kissat/NEWS.md",
    "!kissat/VERSION",
    "!kissat/src/*.c",
    "!kissat/src/*.h",
]

[build-dependencies]
cc = "1.2.65"
